[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "geospaitial-lab-aviary"
description = "Composable inference and postprocessing pipeline for remote sensing data"
readme = "README.md"
authors = [
    {name = "Marius Maryniak", email = "marius.maryniak@w-hs.de"},
]
maintainers = [
    {name = "Marius Maryniak", email = "marius.maryniak@w-hs.de"},
    {name = "Alexander Roß", email = "alexander.ross@w-hs.de"},
]
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = [
    "dependencies",
    "version",
]

[project.urls]
Homepage = "https://www.github.com/geospaitial-lab/aviary"
Documentation = "https://geospaitial-lab.github.io/aviary"

[project.scripts]
aviary = "aviary._cli.cli:app"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
version = {attr = "aviary.__version__"}

[tool.setuptools.packages]
find = {where = ["."], include = ["aviary*"]}

[tool.setuptools.package-data]
aviary = ["py.typed"]

[tool.coverage.run]
omit = [
    "aviary/_cli/*",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
]

[tool.pytest.ini_options]
norecursedirs = [
    "tests/_functional/data",
    "tests/_functional/geodata",
    "tests/data",
    "tests/geodata",
    "tests/pipeline",
]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    "D205",
    "D212",
    "D415",
    "FBT001",
    "FBT002",
    "PLR0913",
    "PT003",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
]

[tool.ruff.lint.per-file-ignores]
"aviary/_cli/cli.py" = [
    "T201",
]
"aviary/core/exceptions.py" = [
    "D101",
]
"dev/scripts/*" = [
    "T201",
]
"docs/*.ipynb" = [
    "D103",
    "T201",
]
"docs/how_to_guides/api/notebooks/how_to_use_the_bounding_box.ipynb" = [
    "ARG005",
    "E731",
]
"docs/how_to_guides/api/notebooks/how_to_use_the_process_area.ipynb" = [
    "ARG005",
    "E731",
]
"tests/*" = [
    "D103",
    "PLR2004",
    "S101",
    "SLF001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
